# realestate-platform

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: launch.json
docs/: COST_CONTROLS.md  MCP_SERVER.md  STRATEGY.md
docs/backtest_reports/: backtest-2026-05-16-2014w5-OOS.md  backtest-2026-05-16-2014w5.md  backtest-2026-05-16-2018w5-OOS.md  backtest-2026-05-16-2018w5.md
src/reip/: __init__.py  alpha.py  api.py  avm.py  backtest.py  brrrr.py  buybox.py  chat.py  cli.py  climate.py  config.py  decision.py  decision_ledger.py  freshness.py  listings_search.py  mcp_server.py  msa_score.py  portfolio.py  projection.py  property_ingest.py  recommendation.py  remarks.py  render.py  report.py  score.py  score_as_of.py  score_backtest.py  snapshots.py  store.py  strategy.py  stress.py  tax.py  underwriting.py  vault_knowledge.py  zip_returns.py
src/reip/loaders/: __init__.py  _http.py  acs.py  bls_qcew.py  cbsa_xwalk.py  census_permits.py  fema.py  fhfa_hpi.py  fred.py  hud_fmr.py  irs_migration.py  redfin.py  redfin_listings.py  schools.py  static_data.py  zillow.py  zip_xwalk.py
src/reip/static/: app.js  index.html
tests/: conftest.py  test_buy_pipeline.py  test_buybox.py  test_chat.py  test_climate.py  test_memphis_canonical.py  test_new_modules.py  test_portfolio.py  test_property_ingest.py  test_recommendation.py  test_round5.py  test_schools.py  test_score_as_of.py  test_score_backtest.py  test_session3.py  test_smoke.py  test_strategy.py  test_stress.py
tests/fixtures/: memphis_canonical.yaml
