[project]
name = "reip"
version = "0.1.0"
description = "Real estate investment decision platform — pulls listing, rent, migration, climate, employment, and macro data into a ranked yield/growth/risk score per zip."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "duckdb>=1.0",
    "pandas>=2.2",
    "pyarrow>=15",
    "click>=8.1",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
    "rich>=13.0",
    "openpyxl>=3.1",
    "python-docx>=1.0",
    "mcp[cli]>=1.27.1",
]

[project.scripts]
reip = "reip.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reip"]
